--- a/AGI.Corp.Intranet.Announcements.Details/package.json
+++ b/AGI.Corp.Intranet.Announcements.Details/package.json
@@ -17,21 +17,23 @@
     "@microsoft/sp-property-pane": "1.15.2",
     "@microsoft/sp-webpart-base": "1.15.2",
     "@microsoft/sp-lodash-subset": "1.15.2",
-    "@microsoft/sp-office-ui-fabric-core": "1.15.2"
+    "@microsoft/sp-office-ui-fabric-core": "1.15.2",
+    "@pnp/sp": "^2.11.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
-    "@rushstack/eslint-config": "2.5.1",
-    "@microsoft/eslint-plugin-spfx": "1.15.2",
     "@microsoft/eslint-config-spfx": "1.15.2",
+    "@microsoft/eslint-plugin-spfx": "1.15.2",
+    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
     "@microsoft/sp-build-web": "1.15.2",
+    "@microsoft/sp-module-interfaces": "1.15.2",
+    "@rushstack/eslint-config": "2.5.1",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
-    "gulp": "4.0.2",
-    "typescript": "4.5.5",
-    "@types/react": "16.9.51",
-    "@types/react-dom": "16.9.8",
     "eslint-plugin-react-hooks": "4.3.0",
-    "@microsoft/sp-module-interfaces": "1.15.2"
+    "gulp": "4.0.2",
+    "typescript": "4.5.5"
   }
 }
