--- a/AGI.Corp.Intranet.Gallery.Listing/package.json
+++ b/AGI.Corp.Intranet.Gallery.Listing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agi-intranet-gallery-listing",
+  "name": "agi-corp-intranet-gallery-listing",
   "version": "0.0.1",
   "private": true,
   "main": "lib/index.js",
@@ -18,27 +18,23 @@
     "@microsoft/sp-property-pane": "1.11.0",
     "@microsoft/sp-webpart-base": "1.11.0",
     "@pnp/sp": "^2.11.0",
-    "@pnp/spfx-controls-react": "^3.10.0-beta.2834849",
-    "moment": "^2.29.4",
     "office-ui-fabric-react": "6.214.0",
-    "react": "^16.14.0",
-    "react-dom": "16.8.5",
-    "react-js-pagination": "^3.0.3",
-    "react-router-dom": "^6.3.0"
+    "react": "16.8.5",
+    "react-dom": "16.8.5"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
-    "@microsoft/sp-build-web": "1.11.0",
-    "@microsoft/sp-module-interfaces": "1.11.0",
-    "@microsoft/sp-tslint-rules": "1.11.0",
-    "@microsoft/sp-webpart-workbench": "1.11.0",
-    "@types/chai": "3.4.34",
-    "@types/es6-promise": "0.0.33",
-    "@types/mocha": "2.2.38",
-    "@types/react": "^16.14.30",
+    "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
-    "@types/webpack-env": "1.13.1",
+    "@microsoft/sp-build-web": "1.11.0",
+    "@microsoft/sp-tslint-rules": "1.11.0",
+    "@microsoft/sp-module-interfaces": "1.11.0",
+    "@microsoft/sp-webpart-workbench": "1.11.0",
+    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
+    "gulp": "~3.9.1",
+    "@types/chai": "3.4.34",
+    "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
-    "gulp": "~3.9.1"
+    "@types/webpack-env": "1.13.1",
+    "@types/es6-promise": "0.0.33"
   }
 }
