--- a/AGI.Corp.Intranet.Gallery/config/config.json
+++ b/AGI.Corp.Intranet.Gallery/config/config.json
@@ -13,6 +13,7 @@
   },
   "externals": {},
   "localizedResources": {
-    "AgiIntranetGalleryListingWebPartStrings": "lib/webparts/agiIntranetGalleryListing/loc/{locale}.js"
+    "AgiIntranetGalleryListingWebPartStrings": "lib/webparts/agiIntranetGalleryListing/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
