--- a/AGI.Corp.Intranet.News.Notifications/config/config.json
+++ b/AGI.Corp.Intranet.News.Notifications/config/config.json
@@ -13,6 +13,7 @@
   },
   "externals": {},
   "localizedResources": {
-    "AgiIntranetNewsNotificationsWebPartStrings": "lib/webparts/agiIntranetNewsNotifications/loc/{locale}.js"
+    "AgiIntranetNewsNotificationsWebPartStrings": "lib/webparts/agiIntranetNewsNotifications/loc/{locale}.js",
+    "PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
   }
 }
