--- a/AGI.Corp.Intranet.News.Notifications/package.json
+++ b/AGI.Corp.Intranet.News.Notifications/package.json
@@ -15,6 +15,7 @@
     "@microsoft/sp-property-pane": "1.15.2",
     "@microsoft/sp-webpart-base": "1.15.2",
     "@pnp/sp": "^2.11.0",
+    "@pnp/spfx-property-controls": "3.9.0",
     "moment": "^2.29.4",
     "office-ui-fabric-react": "7.185.7",
     "react": "16.13.1",
