--- a/AGI.Corp.Intranet.Gallery.Listing/config/config.json
+++ b/AGI.Corp.Intranet.Gallery.Listing/config/config.json
@@ -11,8 +11,14 @@
       ]
     }
   },
-  "externals": {},
+  "externals": {
+    "jquery": {
+      "path": "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js",
+      "globalName": "jQuery"
+   }
+  },
   "localizedResources": {
-    "AgiCorpIntranetGalleryListingWebPartStrings": "lib/webparts/agiCorpIntranetGalleryListing/loc/{locale}.js"
+    "AgiCorpIntranetGalleryListingWebPartStrings": "lib/webparts/agiCorpIntranetGalleryListing/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
