--- a/AGI.Corp.Intranet.Gallery.Listing/package.json
+++ b/AGI.Corp.Intranet.Gallery.Listing/package.json
@@ -18,6 +18,8 @@
     "@microsoft/sp-property-pane": "1.11.0",
     "@microsoft/sp-webpart-base": "1.11.0",
     "@pnp/sp": "^2.11.0",
+    "@pnp/spfx-controls-react": "^1.19.0",
+    "jquery": "^3.6.0",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.8.5",
     "react-dom": "16.8.5"
@@ -31,6 +33,7 @@
     "@microsoft/sp-webpart-workbench": "1.11.0",
     "@microsoft/rush-stack-compiler-3.3": "0.3.5",
     "gulp": "~3.9.1",
+    "@types/jquery": "^3.5.6",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
