--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -21,7 +21,8 @@
     "description": { "default": "agiIntranetHomeMain description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "agiIntranetHomeMain"
+      "description": "agiIntranetHomeMain",
+      "topLatestNews": 3
     }
   }]
 }
