--- a/AGI.Corp.Intranet.Home/package.json
+++ b/AGI.Corp.Intranet.Home/package.json
@@ -18,6 +18,8 @@
     "@microsoft/sp-property-pane": "^1.15.2",
     "@microsoft/sp-webpart-base": "^1.15.2",
     "@pnp/sp": "^2.11.0",
+    "@pnp/spfx-property-controls": "^3.9.0",
+    "moment": "^2.29.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
