--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -22,7 +22,8 @@
     "officeFabricIconFontName": "Page",
     "properties": {
       "description": "agiIntranetHomeMain",
-      "topLatestNews": 3
+      "topLatestNews": 3,
+      "topAnnouncements": 10
     }
   }]
 }
