--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -23,7 +23,9 @@
     "properties": {
       "description": "agiIntranetHomeMain",
       "topLatestNews": 3,
-      "topAnnouncements": 10
+      "topAnnouncements": 10,
+      "topSnaps": 50,
+      "topNavigations": 4
     }
   }]
 }
