--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -26,7 +26,8 @@
       "topAnnouncements": 10,
       "topSnaps": 50,
       "topNavigations": 4,
-      "topMyApps": 50
+      "topMyApps": 50,
+      "topSocialMediaPosts": 5
     }
   }]
 }
