dynamic rewards section

--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -27,7 +27,8 @@
       "topSnaps": 50,
       "topNavigations": 4,
       "topMyApps": 50,
-      "topSocialMediaPosts": 5
+      "topSocialMediaPosts": 5,
+      "topRewards": 5
     }
   }]
 }
