dynamic company events section

--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -28,7 +28,8 @@
       "topNavigations": 4,
       "topMyApps": 50,
       "topSocialMediaPosts": 5,
-      "topRewards": 5
+      "topRewards": 5,
+      "topEvents": 3
     }
   }]
 }
