--- a/AGI.Corp.Intranet.Home/package.json
+++ b/AGI.Corp.Intranet.Home/package.json
@@ -15,11 +15,13 @@
     "@microsoft/decorators": "1.11.0",
     "@microsoft/sp-core-library": "1.15.2",
     "@microsoft/sp-dialog": "^1.11.0",
+    "@microsoft/sp-office-ui-fabric-core": "^1.11.0",
     "@microsoft/sp-property-pane": "^1.15.2",
     "@microsoft/sp-webpart-base": "^1.15.2",
     "@pnp/sp": "^2.11.0",
     "@pnp/spfx-property-controls": "^3.9.0",
     "moment": "^2.29.4",
+    "office-ui-fabric-react": "^6.214.0",
     "react": "16.13.1",
     "react-day-picker": "^7.4.10",
     "react-dom": "16.13.1"
