dynamic employee survey component

--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/AgiIntranetHomeMainWebPart.manifest.json
@@ -29,7 +29,8 @@
       "topMyApps": 50,
       "topSocialMediaPosts": 5,
       "topRewards": 5,
-      "topEvents": 3
+      "topEvents": 3,
+      "topSurveyQuestions": 3
     }
   }]
 }
