--- a/AGI.Corp.Intranet.Terms&Conditions/package.json
+++ b/AGI.Corp.Intranet.Terms&Conditions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agi-corp-intranet-blogs",
+  "name": "agi-corp-intranet-terms-conditions",
   "version": "0.0.1",
   "private": true,
   "main": "lib/index.js",
@@ -15,14 +15,10 @@
     "@microsoft/sp-property-pane": "1.14.0",
     "@microsoft/sp-webpart-base": "1.14.0",
     "@pnp/sp": "^2.11.0",
-    "@pnp/spfx-controls-react": "^3.9.0",
-    "moment": "^2.29.4",
     "office-ui-fabric-react": "7.174.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-js-pagination": "^3.0.3",
-    "react-loaders-kit": "^0.1.3",
-    "react-typed": "^1.2.0"
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "16.9.51",
