--- a/AGI.Corp.Intranet.Custom.Branding/package.json
+++ b/AGI.Corp.Intranet.Custom.Branding/package.json
@@ -12,23 +12,25 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/decorators": "1.11.0",
-    "@microsoft/sp-application-base": "1.11.0",
-    "@microsoft/sp-core-library": "1.11.0",
-    "@microsoft/sp-dialog": "1.11.0",
-    "@pnp/sp": "^2.11.0"
+    "@microsoft/decorators": "1.15.2",
+    "@microsoft/sp-application-base": "1.15.2",
+    "@microsoft/sp-core-library": "1.15.2",
+    "@microsoft/sp-dialog": "1.15.2",
+    "@pnp/sp": "^2.11.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@microsoft/sp-build-web": "1.11.0",
-    "@microsoft/sp-tslint-rules": "1.11.0",
-    "@microsoft/sp-module-interfaces": "1.11.0",
-    "@microsoft/sp-webpart-workbench": "1.11.0",
-    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
-    "gulp": "~3.9.1",
-    "@types/chai": "3.4.34",
-    "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2",
-    "@types/webpack-env": "1.13.1",
-    "@types/es6-promise": "0.0.33"
+    "@microsoft/sp-build-web": "1.15.2",
+    "@microsoft/sp-module-interfaces": "1.15.2",
+    "@microsoft/sp-webpart-workbench": "^1.12.1",
+    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
+    "gulp": "4.0.2",
+    "ajv": "^6.12.5",
+    "@types/webpack-env": "~1.15.2",
+    "@types/es6-promise": "0.0.33",
+    "typescript": "4.5.5",
+    "@types/react": "16.9.51",
+    "@types/react-dom": "16.9.8"
   }
 }
