--- a/AGI.Corp.Intranet.Custom.Branding/config/config.json
+++ b/AGI.Corp.Intranet.Custom.Branding/config/config.json
@@ -18,6 +18,8 @@
     }
   },
   "localizedResources": {
-    "AgiIntranetCustomBrandingApplicationCustomizerStrings": "lib/extensions/agiIntranetCustomBranding/loc/{locale}.js"
+    "AgiIntranetCustomBrandingApplicationCustomizerStrings": "lib/extensions/agiIntranetCustomBranding/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js",
+    "PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
   }
 }
