--- a/AGI.Corp.Intranet.ExtraNavigation/package.json
+++ b/AGI.Corp.Intranet.ExtraNavigation/package.json
@@ -12,29 +12,29 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.11.0",
-    "@microsoft/sp-lodash-subset": "1.11.0",
-    "@microsoft/sp-office-ui-fabric-core": "1.11.0",
-    "@microsoft/sp-property-pane": "1.11.0",
-    "@microsoft/sp-webpart-base": "1.11.0",
+    "@microsoft/sp-core-library": "1.15.2",
+    "@microsoft/sp-lodash-subset": "1.15.2",
+    "@microsoft/sp-office-ui-fabric-core": "1.15.2",
+    "@microsoft/sp-property-pane": "^1.15.2",
+    "@microsoft/sp-webpart-base": "^1.15.2",
     "@pnp/sp": "^2.11.0",
     "office-ui-fabric-react": "6.214.0",
-    "react": "16.8.5",
-    "react-dom": "16.8.5"
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.3",
-    "@microsoft/sp-build-web": "1.11.0",
-    "@microsoft/sp-tslint-rules": "1.11.0",
-    "@microsoft/sp-module-interfaces": "1.11.0",
-    "@microsoft/sp-webpart-workbench": "1.11.0",
-    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
-    "gulp": "~3.9.1",
+    "@types/react": "16.9.51",
+    "@types/react-dom": "16.9.8",
+    "@microsoft/sp-build-web": "1.15.2",
+    "@microsoft/sp-tslint-rules": "1.15.2",
+    "@microsoft/sp-module-interfaces": "1.15.2",
+    "@microsoft/sp-webpart-workbench": "^1.12.1",
+    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
+    "gulp": "~4.0.2",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2",
-    "@types/webpack-env": "1.13.1",
+    "ajv": "^6.12.5",
+    "@types/webpack-env": "~1.15.2",
     "@types/es6-promise": "0.0.33"
   }
 }
