--- a/AGI.Corp.Intranet.Snap.Share/tsconfig.json
+++ b/AGI.Corp.Intranet.Snap.Share/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/@microsoft/rush-stack-compiler-3.3/includes/tsconfig-web.json",
+  "extends": "./node_modules/@microsoft/rush-stack-compiler-4.5/includes/tsconfig-web.json",
   "compilerOptions": {
     "target": "es5",
     "forceConsistentCasingInFileNames": true,
@@ -25,7 +25,8 @@
     "lib": [
       "es5",
       "dom",
-      "es2015.collection"
+      "es2015.collection",
+      "es2016"
     ]
   },
   "include": [
