--- a/AGI.Corp.Intranet.CompanyPolicy.Details/package.json
+++ b/AGI.Corp.Intranet.CompanyPolicy.Details/package.json
@@ -20,6 +20,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-to-print": "^2.14.7",
     "tslib": "2.3.1"
   },
   "devDependencies": {
