--- a/AGI.Corp.Intranet.AboutUs/tsconfig.json
+++ b/AGI.Corp.Intranet.AboutUs/tsconfig.json
@@ -14,12 +14,13 @@
     "inlineSources": false,
     "strictNullChecks": false,
     "noUnusedLocals": false,
+    "noImplicitAny": true,
+
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@microsoft"
     ],
     "types": [
-      "es6-promise",
       "webpack-env"
     ],
     "lib": [
@@ -33,9 +34,5 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "lib"
   ]
 }
