--- a/AGI.Corp.Intranet.AboutUs/package.json
+++ b/AGI.Corp.Intranet.AboutUs/package.json
@@ -22,19 +22,24 @@
     "combokeys": "^3.0.1",
     "jquery": "^3.6.1",
     "jqueryui": "^1.11.1",
-    "office-ui-fabric-react": "6.214.0",
+    "office-ui-fabric-react": "7.185.7",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
+    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
+    "@rushstack/eslint-config": "2.5.1",
+    "@microsoft/eslint-plugin-spfx": "1.15.2",
+    "@microsoft/eslint-config-spfx": "1.15.2",
+    "@microsoft/sp-build-web": "1.15.2",
+    "@types/webpack-env": "~1.15.2",
+    "ajv": "^6.12.5",
+    "gulp": "4.0.2",
+    "typescript": "4.5.5",
     "@types/react": "16.9.51",
     "@types/react-dom": "16.9.8",
-    "@microsoft/sp-build-web": "1.15.2",
-    "@microsoft/sp-module-interfaces": "1.15.2",
-    "@microsoft/sp-webpart-workbench": "1.12.1",
-    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
-    "gulp": "4.0.2",
-    "ajv": "^6.12.5",
-    "@types/webpack-env": "~1.15.2"
+    "eslint-plugin-react-hooks": "4.3.0",
+    "@microsoft/sp-module-interfaces": "1.15.2"
   }
 }
