--- a/AGI.Corp.Intranet.Business.Functions.Service/tsconfig.json
+++ b/AGI.Corp.Intranet.Business.Functions.Service/tsconfig.json
@@ -25,8 +25,7 @@
     "lib": [
       "es5",
       "dom",
-      "es2015.collection",
-      "es2017"
+      "es2015.collection"
     ]
   },
   "include": [
