--- a/AGI.Corp.Int.Bus.Func.Leadership/package.json
+++ b/AGI.Corp.Int.Bus.Func.Leadership/package.json
@@ -33,6 +33,10 @@
     "@microsoft/rush-stack-compiler-4.5": "0.2.2",
     "gulp": "4.0.2",
     "ajv": "^6.12.5",
-    "@types/webpack-env": "~1.15.2"
+    "@types/webpack-env": "~1.15.2",
+    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
+    "@types/chai": "3.4.34",
+    "@types/mocha": "2.2.38",
+    "@types/es6-promise": "0.0.33"
   }
 }
