--- a/AGI.Corp.Intranet.Business.Function.Service/config/config.json
+++ b/AGI.Corp.Intranet.Business.Function.Service/config/config.json
@@ -11,7 +11,17 @@
       ]
     }
   },
-  "externals": {},
+  "externals": { "jquery": {
+    "path": "node_modules/jquery/dist/jquery.min.js",
+    "globalName": "jQuery"
+  },
+  "bootstrap": {
+    "path": "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+    "globalName": "bootstrap",
+    "globalDependencies": [
+      "jquery"
+    ]
+  }},
   "localizedResources": {
     "AgiIntBusFuncServiceWebPartStrings": "lib/webparts/agiIntBusFuncService/loc/{locale}.js"
   }
