--- a/AGI.Corp.Intranet.Business.Function.Media/package.json
+++ b/AGI.Corp.Intranet.Business.Function.Media/package.json
@@ -18,23 +18,27 @@
     "@microsoft/sp-property-pane": "1.15.2",
     "@microsoft/sp-webpart-base": "1.15.2",
     "@pnp/sp": "^2.11.0",
+    "@types/bootstrap": "^5.2.5",
+    "bootstrap": "^5.2.2",
+    "jquery": "^3.6.1",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@types/react": "16.9.51",
-    "@types/react-dom": "16.9.8",
+    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
+    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
     "@microsoft/sp-build-web": "1.15.2",
     "@microsoft/sp-module-interfaces": "1.15.2",
     "@microsoft/sp-webpart-workbench": "1.12.1",
-    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
-    "gulp": "4.0.2",
-    "ajv": "^6.12.5",
-    "@types/webpack-env": "~1.15.2",
-    "@microsoft/rush-stack-compiler-3.3": "0.3.5",
     "@types/chai": "3.4.34",
+    "@types/es6-promise": "0.0.33",
+    "@types/jquery": "^3.5.14",
     "@types/mocha": "2.2.38",
-    "@types/es6-promise": "0.0.33"
+    "@types/react": "16.9.51",
+    "@types/react-dom": "16.9.8",
+    "@types/webpack-env": "~1.15.2",
+    "ajv": "^6.12.5",
+    "gulp": "4.0.2"
   }
 }
