--- a/AGI.Corp.Intranet.ContactUs/package.json
+++ b/AGI.Corp.Intranet.ContactUs/package.json
@@ -19,9 +19,11 @@
     "@microsoft/sp-property-pane": "1.15.2",
     "@microsoft/sp-webpart-base": "^1.15.2",
     "@pnp/sp": "^2.11.0",
+    "html-react-parser": "^3.0.4",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-4.5": "0.2.2",
