--- a/AGI.Corp.Intranet.Custom.Branding/package.json
+++ b/AGI.Corp.Intranet.Custom.Branding/package.json
@@ -26,8 +26,10 @@
     "@pnp/spfx-property-controls": "^3.9.0",
     "@uifabric/merge-styles": "^7.19.2",
     "idb-keyval": "^5.1.5",
+    "moment": "^2.29.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-moment": "^1.1.2",
     "spfx-uifabric-themes": "^0.8.5"
   },
   "devDependencies": {
