--- a/AGI.Corp.Intranet.Blog.Details/package.json
+++ b/AGI.Corp.Intranet.Blog.Details/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.29.4",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "16.9.51",
