implement phone number validation for negative number

--- a/AGI.Corp.Intranet.ICare/package.json
+++ b/AGI.Corp.Intranet.ICare/package.json
@@ -16,6 +16,7 @@
     "@microsoft/sp-property-pane": "1.15.2",
     "@microsoft/sp-webpart-base": "1.15.2",
     "@pnp/sp": "^2.11.0",
+    "@types/react-router": "^5.1.19",
     "office-ui-fabric-react": "7.185.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
