mark as featured dynamic web part properties and functionality

--- a/AGI.Corp.Intranet.Publish/src/webparts/agiIntranetPublish/AgiIntranetPublishWebPart.manifest.json
+++ b/AGI.Corp.Intranet.Publish/src/webparts/agiIntranetPublish/AgiIntranetPublishWebPart.manifest.json
@@ -23,7 +23,9 @@
     "officeFabricIconFontName": "Page",
     "properties": {
       "description": "AgiIntranetPublish",
-      "groups" : []
+      "groups" : [],
+      "listName": "",
+      "itemId": ""
     }
   }]
 }
