--- a/AGI.Corp.Intranet.Publish/package.json
+++ b/AGI.Corp.Intranet.Publish/package.json
@@ -14,6 +14,7 @@
     "@microsoft/sp-office-ui-fabric-core": "1.15.2",
     "@microsoft/sp-property-pane": "1.15.2",
     "@microsoft/sp-webpart-base": "1.15.2",
+    "@pnp/sp": "^2.14.0",
     "@pnp/spfx-controls-react": "^2.2.0",
     "@pnp/spfx-property-controls": "^1.16.0",
     "jquery": "^3.4.1",
